Week 9 Homework Complete

--- a/force-app/main/default/classes/NextStepBatch.cls
+++ b/force-app/main/default/classes/NextStepBatch.cls
@@ -22,36 +22,55 @@ public with sharing class NextStepBatch implements Database.Batchable<sObject>{
 
     public Database.QueryLocator start(Database.BatchableContext BC){
         // Query for all accounts and return the query locator.
-        return null; // Update null with the query locator
+        return Database.getQueryLocator([SELECT Id, Next_Step__c FROM Account]);
     }
     
     public void execute(Database.BatchableContext BC, List<Account> scope){
         final String BATCH_NEXT_STEP = 'Batching the next meetings together.';
 
         // Update the Next Step field on each record in the batch scope.
-
-        // Loop through the scope account records
-
-            // Set the Next Step field to 'Batching the next meetings together.'
+        for(Account acc : scope){
+            acc.Next_Step__c = BATCH_NEXT_STEP;
+        }
 
         // Update the account records in this batch scope
-        
+        if(!scope.isEmpty()){
+            update scope;
+        }
+
+        //Get the account Ids to Query Related Opportunities
+        Set<Id> accountIds = new Set<Id>();
+        for(Account acc : scope){
+            accountIds.add(acc.Id);
+        }
+
         // Query for all opportunities related to the accounts in this batch scope
+        List<Opportunity> opportunities = [
+            SELECT Id, NextStep
+            FROM Opportunity
+            WHERE AccountId IN :accountIds
+        ];
 
-        // Loop through the opportunity records
-
-            // Set the Next Step field to 'Batching the next meetings together.'
-
+        // Update the Next Step field on each opportunity record
+        for(Opportunity opp : opportunities){
+            opp.NextStep = BATCH_NEXT_STEP;
+        }
+    
         // Update the opportunity records
-
+        if(!opportunities.isEmpty()){
+            update opportunities;
+        }
     }
     
     public void finish(Database.BatchableContext BC){
         final List<User> USERS = [SELECT Id, Name, Email FROM User WHERE IsActive = true AND (NOT Email LIKE 'autoproc%')]; // DO NOT CHANGE
 
         // Get the email addresses of all active users
-
-            // Pass the set of active user emails to the sendEmailToActiveUsers method
+        Set<String> emailAddresses = new Set<String>();
+        for(User user : USERS){
+            emailAddresses.add(user.Email);
+        }
+        sendEmailToActiveUsers(emailAddresses);
     }
 
     // Helper method to send an email to all emails in the set
@@ -64,7 +83,6 @@ public with sharing class NextStepBatch implements Database.Batchable<sObject>{
             Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail });
         } catch (Exception e) {
             System.debug('Error sending email: ' + e.getMessage());
-        }
-        
+        }     
     }
 }
