--- a/force-app/main/default/classes/NextStepFuture.cls
+++ b/force-app/main/default/classes/NextStepFuture.cls
@@ -27,9 +27,29 @@ public with sharing class NextStepFuture {
      * Opportunity Next Step field is a standard field
      * Update the corresponding test class AsynchronousTest and test method nextStepFuture_testUpdateAllNextStep to cover test this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    @future
+    public static void updateAllNextStep(){
+        List<Account> accountsToUpdate = new List<Account>();
+        List<Opportunity> opportunitiesToUpdate = new List<Opportunity>();
+
+        for(Account acc : [SELECT Id, Next_Step__c FROM Account WHERE Next_Step__c != 'Meeting in the future']){
+           acc.Next_Step__c = 'Meeting in the future';
+           accountsToUpdate.add(acc); 
+        }
+
+        for(Opportunity opp : [SELECT Id, NextStep FROM Opportunity WHERE NextStep != 'Meeting in the future']){
+            opp.NextStep = 'Meeting in the future';
+            opportunitiesToUpdate.add(opp);
+        }
+
+        if(!accountsToUpdate.isEmpty()){
+            update accountsToUpdate;
+        }
+
+        if(!opportunitiesToUpdate.isEmpty()){
+            update opportunitiesToUpdate;
+        }
+    }
 
     /*
     * Question 2
@@ -42,8 +62,8 @@ public with sharing class NextStepFuture {
         Opportunity bigDeal = new Opportunity();
         insertBigDeal(bigDeal);
 
-        UserRole[] roles = [SELECT Id, Name FROM UserRole WHERE Id = :UserInfo.getUserRoleId() OR Name = 'CRO' LIMIT 1];
-        updateUserRoleName(roles);
+        // Update the user role name asynchronously
+        updateUserRoleToCRO();
     }
 
     // Helper method to insert big deal
@@ -56,6 +76,12 @@ public with sharing class NextStepFuture {
         insert opp;
     }
 
+    @future
+    public static void updateUserRoleToCRO(){
+
+    UserRole[] roles = [SELECT Id, Name FROM UserRole WHERE Id = :UserInfo.getUserRoleId() OR Name = 'CRO' LIMIT 1];
+        updateUserRoleName(roles);
+    }
 
     // Helper method to update role name
     private static void updateUserRoleName(UserRole[] roles){
