--- a/force-app/main/default/classes/NextStepQueueable.cls
+++ b/force-app/main/default/classes/NextStepQueueable.cls
@@ -17,7 +17,7 @@
  * 
  * Note: The class below contains placeholders for implementing a queueable job to update accounts and opportunities.
  */
-public with sharing class NextStepQueueable {
+public with sharing class NextStepQueueable implements Queueable{
 
     // Member variable to store the accounts
     private Map<Id,Account> accounts;
@@ -25,34 +25,67 @@ public with sharing class NextStepQueueable {
     // Constructor to accept the accounts
     public NextStepQueueable(Map<Id,Account> accounts) {
         // Store the accounts in a member variable
+        this.accounts = accounts;
     }
 
     // Method to queue the job
     public static void enqueueJob() {
         // Get 10 accounts with Next Step populated
-
+        List<Account> accountList = [
+            SELECT Id, Next_Step__c
+            FROM Account
+            WHERE Next_Step__c != null
+            LIMIT 10
+        ];
         // If there are any accounts, queue the job using System.enqueueJob
+        if(!accountList.isEmpty()){
+            Map<Id, Account> accountMap = new Map<Id, Account>(accountList);
+            System.enqueueJob(new NextStepQueueable(accountMap));
+        }
     }
 
     /*
      * Update/Uncomment the template code to create a method
      * Method to execute the queueable job
      */
-    //[public | private ] [static] data_type execute (input parameters) {
+    public void execute(QueueableContext context) {
         // Get the accounts from the member variable
+        List<Account> accountsToUpdate = new List<Account>();
+        List<Opportunity> opportunitiesToUpdate = new List<Opportunity>();
 
-            // Remove the Next Step using the helper method
+        // Remove the Next Step using the helper method
+        for(Account acc : accounts.values()){
+            removeNextStep(acc);
+            accountsToUpdate.add(acc);
+        }
 
         // Update the accounts
+        if(!accountsToUpdate.isEmpty()){
+            update accountsToUpdate;
+        }
 
         // Get the opportunities related to the accounts
-
-            // Remove the Next Step using the helper method
+        List<Opportunity> relatedOpportunites = [
+            SELECT Id, NextStep
+            FROM Opportunity
+            WHERE AccountId IN :accounts.keySet()
+            AND NextStep != null
+        ];
+        
+        // Remove the Next Step using the helper method
+        for(Opportunity opp : relatedOpportunites){
+            removeNextStep(opp);
+            opportunitiesToUpdate.add(opp);
+        }
 
         // Update the opportunities
+        if(!opportunitiesToUpdate.isEmpty()){
+            update opportunitiesToUpdate;
+        }
 
         // Call the enqueueJob method to queue another job to process more records.
-    //}
+        enqueueJob();
+    }
 
     // Helper method to remove the Next Step
     // Overloaded method to accept an opportunity
